add esi mistral ironic actions

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = tripleo-common
+name = esi-common
 summary = A common library for ESI code and workflows.
 description-file =
     README.md
@@ -10,3 +10,11 @@ packages =
 
 data_files =
     share/esi-common/workbooks = workbooks/*
+
+[entry_points]
+mistral.actions =
+    esi.ironic.node_create = esi_common.actions.ironic:NodeCreateAction
+    esi.ironic.node_get = esi_common.actions.ironic:NodeGetAction
+    esi.ironic.node_set_provision_state = esi_common.actions.ironic:NodeSetProvisionStateAction
+    esi.ironic.node_update = esi_common.actions.ironic:NodeUpdateAction
+    esi.ironic.port_create = esi_common.actions.ironic:PortCreateAction
