--- a/workbooks/esi_owner.yaml
+++ b/workbooks/esi_owner.yaml
@@ -1,8 +1,8 @@
 ---
 version: '2.0'
 
-name: oesi_owner
-description: OESI hardware owner workflows and actions
+name: esi_owner
+description: ESI hardware owner workflows and actions
 
 workflows:
 
@@ -15,7 +15,7 @@ workflows:
 
     tasks:
       get_node:
-        action: oesiironic.node_get node_id=<% $.node_id %>
+        action: esi.ironic.node_get node_id=<% $.node_id %>
         publish:
           can_access: <% task(get_node).result.properties.get('project','') = ($.openstack.project_name) %>
 
@@ -49,7 +49,7 @@ workflows:
           - create_ironic_node
 
       create_ironic_node:
-        action: oesiironic.node_create
+        action: esi.ironic.node_create
         input:
           name: <% $.name %>
           driver: <% $.driver %>
@@ -62,7 +62,7 @@ workflows:
           - create_node_port
 
       create_node_port:
-        action: oesiironic.port_create
+        action: esi.ironic.port_create
         input:
           node_uuid: <% $.node_uuid %>
           address: <% $.port_address %>
@@ -92,7 +92,7 @@ workflows:
           message: You do not have permission to manage node <% $.node_id %>
 
       set_node_provision_state:
-        action: oesiironic.node_set_provision_state
+        action: esi.ironic.node_set_provision_state
         input:
           node_uuid: <% $.node_id %>
           state: <% $.state %>
@@ -151,7 +151,7 @@ workflows:
           message: You do not have permission to manage node <% $.node_id %>
 
       make_node_available:
-        action: oesiironic.node_update
+        action: esi.ironic.node_update
         input:
           node_id: <% $.node_id %>
           patch: [{"op": "add", "path": "/properties/available", "value": "*"}]
@@ -179,7 +179,7 @@ workflows:
           message: You do not have permission to manage node <% $.node_id %>
 
       make_node_unavailable:
-        action: oesiironic.node_update
+        action: esi.ironic.node_update
         input:
           node_id: <% $.node_id %>
           patch: [{"op": "remove", "path": "/properties/available"}]
@@ -189,7 +189,7 @@ workflows:
           - get_running_server
 
       get_running_server:
-        action: oesiironic.node_get node_id=<% $.node_id %>
+        action: esi.ironic.node_get node_id=<% $.node_id %>
         publish:
           instance_id: <% task(get_running_server).result.instance_uuid %>
         on-success:
