--- a/workbooks/esi_owner.yaml
+++ b/workbooks/esi_owner.yaml
@@ -17,7 +17,7 @@ workflows:
       get_node:
         action: esi.ironic.node_get node_id=<% $.node_id %>
         publish:
-          can_access: <% task(get_node).result.properties.get('project_owner_id','') = ($.openstack.project_id) %>
+          can_access: <% task(get_node).result.properties.get('project_owner_id','') = ($.openstack.project_id) or task(get_node).result.properties.get('project_id','') = ($.openstack.project_id)%>
 
 
   create_node:
